esp_http_client/build/log/idf_py_stdout_output_5016
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\ismae\Desktop\Esp32cliente\esp_http_client\build\bootloader\esp-idf\esptool_py && C:\Users\ismae\.espressif\python_env\idf5.0_py3.8_env\Scripts\python.exe C:/Users/ismae/esp1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/ismae/Desktop/Esp32cliente/esp_http_client/build/bootloader/bootloader.bin"
Bootloader binary size 0x6700 bytes. 0x900 bytes (8%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/esp_http_client_example.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/esp_http_client_example.c.obj 
ccache C:\Users\ismae\.espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DUNITY_INCLUDE_CONFIG_H -IC:/Users/ismae/Desktop/Esp32cliente/esp_http_client/build/config -IC:/Users/ismae/Desktop/Esp32cliente/esp_http_client/main -IC:/Users/ismae/esp1/components/newlib/platform_include -IC:/Users/ismae/esp1/components/freertos/FreeRTOS-Kernel/include -IC:/Users/ismae/esp1/components/freertos/esp_additions/include/freertos -IC:/Users/ismae/esp1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/ismae/esp1/components/freertos/esp_additions/include -IC:/Users/ismae/esp1/components/esp_hw_support/include -IC:/Users/ismae/esp1/components/esp_hw_support/include/soc -IC:/Users/ismae/esp1/components/esp_hw_support/include/soc/esp32 -IC:/Users/ismae/esp1/components/esp_hw_support/port/esp32/. -IC:/Users/ismae/esp1/components/esp_hw_support/port/esp32/private_include -IC:/Users/ismae/esp1/components/heap/include -IC:/Users/ismae/esp1/components/log/include -IC:/Users/ismae/esp1/components/soc/include -IC:/Users/ismae/esp1/components/soc/esp32/. -IC:/Users/ismae/esp1/components/soc/esp32/include -IC:/Users/ismae/esp1/components/hal/esp32/include -IC:/Users/ismae/esp1/components/hal/include -IC:/Users/ismae/esp1/components/hal/platform_port/include -IC:/Users/ismae/esp1/components/esp_rom/include -IC:/Users/ismae/esp1/components/esp_rom/include/esp32 -IC:/Users/ismae/esp1/components/esp_rom/esp32 -IC:/Users/ismae/esp1/components/esp_common/include -IC:/Users/ismae/esp1/components/esp_system/include -IC:/Users/ismae/esp1/components/esp_system/port/soc -IC:/Users/ismae/esp1/components/esp_system/port/include/private -IC:/Users/ismae/esp1/components/xtensa/include -IC:/Users/ismae/esp1/components/xtensa/esp32/include -IC:/Users/ismae/esp1/components/lwip/include -IC:/Users/ismae/esp1/components/lwip/include/apps -IC:/Users/ismae/esp1/components/lwip/include/apps/sntp -IC:/Users/ismae/esp1/components/lwip/lwip/src/include -IC:/Users/ismae/esp1/components/lwip/port/esp32/include -IC:/Users/ismae/esp1/components/lwip/port/esp32/include/arch -IC:/Users/ismae/esp1/components/esp_ringbuf/include -IC:/Users/ismae/esp1/components/efuse/include -IC:/Users/ismae/esp1/components/efuse/esp32/include -IC:/Users/ismae/esp1/components/driver/include -IC:/Users/ismae/esp1/components/driver/deprecated -IC:/Users/ismae/esp1/components/driver/esp32/include -IC:/Users/ismae/esp1/components/esp_pm/include -IC:/Users/ismae/esp1/components/mbedtls/port/include -IC:/Users/ismae/esp1/components/mbedtls/mbedtls/include -IC:/Users/ismae/esp1/components/mbedtls/mbedtls/library -IC:/Users/ismae/esp1/components/mbedtls/esp_crt_bundle/include -IC:/Users/ismae/esp1/components/esp_app_format/include -IC:/Users/ismae/esp1/components/bootloader_support/include -IC:/Users/ismae/esp1/components/bootloader_support/bootloader_flash/include -IC:/Users/ismae/esp1/components/esp_partition/include -IC:/Users/ismae/esp1/components/app_update/include -IC:/Users/ismae/esp1/components/spi_flash/include -IC:/Users/ismae/esp1/components/pthread/include -IC:/Users/ismae/esp1/components/esp_timer/include -IC:/Users/ismae/esp1/components/app_trace/include -IC:/Users/ismae/esp1/components/esp_event/include -IC:/Users/ismae/esp1/components/nvs_flash/include -IC:/Users/ismae/esp1/components/esp_phy/include -IC:/Users/ismae/esp1/components/esp_phy/esp32/include -IC:/Users/ismae/esp1/components/vfs/include -IC:/Users/ismae/esp1/components/esp_netif/include -IC:/Users/ismae/esp1/components/wpa_supplicant/include -IC:/Users/ismae/esp1/components/wpa_supplicant/port/include -IC:/Users/ismae/esp1/components/wpa_supplicant/esp_supplicant/include -IC:/Users/ismae/esp1/components/esp_wifi/include -IC:/Users/ismae/esp1/components/unity/include -IC:/Users/ismae/esp1/components/unity/unity/src -IC:/Users/ismae/esp1/components/cmock/CMock/src -IC:/Users/ismae/esp1/components/console -IC:/Users/ismae/esp1/components/http_parser -IC:/Users/ismae/esp1/components/esp-tls -IC:/Users/ismae/esp1/components/esp-tls/esp-tls-crypto -IC:/Users/ismae/esp1/components/esp_adc/include -IC:/Users/ismae/esp1/components/esp_adc/interface -IC:/Users/ismae/esp1/components/esp_adc/esp32/include -IC:/Users/ismae/esp1/components/esp_adc/deprecated/include -IC:/Users/ismae/esp1/components/esp_eth/include -IC:/Users/ismae/esp1/components/esp_gdbstub/include -IC:/Users/ismae/esp1/components/esp_gdbstub/xtensa -IC:/Users/ismae/esp1/components/esp_gdbstub/esp32 -IC:/Users/ismae/esp1/components/esp_hid/include -IC:/Users/ismae/esp1/components/tcp_transport/include -IC:/Users/ismae/esp1/components/esp_http_client/include -IC:/Users/ismae/esp1/components/esp_http_server/include -IC:/Users/ismae/esp1/components/esp_https_ota/include -IC:/Users/ismae/esp1/components/esp_lcd/include -IC:/Users/ismae/esp1/components/esp_lcd/interface -IC:/Users/ismae/esp1/components/protobuf-c/protobuf-c -IC:/Users/ismae/esp1/components/protocomm/include/common -IC:/Users/ismae/esp1/components/protocomm/include/security -IC:/Users/ismae/esp1/components/protocomm/include/transports -IC:/Users/ismae/esp1/components/esp_local_ctrl/include -IC:/Users/ismae/esp1/components/esp_psram/include -IC:/Users/ismae/esp1/components/espcoredump/include -IC:/Users/ismae/esp1/components/espcoredump/include/port/xtensa -IC:/Users/ismae/esp1/components/wear_levelling/include -IC:/Users/ismae/esp1/components/sdmmc/include -IC:/Users/ismae/esp1/components/fatfs/diskio -IC:/Users/ismae/esp1/components/fatfs/vfs -IC:/Users/ismae/esp1/components/fatfs/src -IC:/Users/ismae/esp1/components/idf_test/include -IC:/Users/ismae/esp1/components/idf_test/include/esp32 -IC:/Users/ismae/esp1/components/ieee802154/include -IC:/Users/ismae/esp1/components/json/cJSON -IC:/Users/ismae/esp1/components/mqtt/esp-mqtt/include -IC:/Users/ismae/esp1/components/perfmon/include -IC:/Users/ismae/esp1/components/spiffs/include -IC:/Users/ismae/esp1/components/ulp/ulp_common/include -IC:/Users/ismae/esp1/components/ulp/ulp_common/include/esp32 -IC:/Users/ismae/esp1/components/wifi_provisioning/include -IC:/Users/ismae/esp1/examples/common_components/protocol_examples_common/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Users/ismae/Desktop/Esp32cliente/esp_http_client=. -fmacro-prefix-map=C:/Users/ismae/esp1=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.2\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/esp_http_client_example.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\esp_http_client_example.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/esp_http_client_example.c.obj -c C:/Users/ismae/Desktop/Esp32cliente/esp_http_client/main/esp_http_client_example.c
C:/Users/ismae/Desktop/Esp32cliente/esp_http_client/main/esp_http_client_example.c: In function 'http_rest_with_url':
C:/Users/ismae/Desktop/Esp32cliente/esp_http_client/main/esp_http_client_example.c:197:5: error: expected ',' or ';' before 'if'
  197 |     if (messages) {
      |     ^~
C:/Users/ismae/Desktop/Esp32cliente/esp_http_client/main/esp_http_client_example.c:194:11: warning: unused variable 'message' [-Wunused-variable]
  194 |     char *message=cJSON_Print(messages);
      |           ^~~~~~~
ninja: build stopped: subcommand failed.
